# drone

./: .classpath  .gitignore  .gitignore~  .project  Doxyfile  README  README.txt  boot.properties  build.xml  buildlibs  bundlelibs.osx  config.pro  config.pro.template  drone.pro  dronej  flags.pro.template  runDroneGuiOSX.launch
.pymake/: config
0.3/dronescript/: drone.pro
0.3/dronescript/lib/agg23/examples/: Makefile.am  alpha_mask3.cpp  bspline.cpp  compositing.cpp  gamma_ctrl.cpp  image_alpha.cpp  image_filters2.cpp  image_resample.cpp  lion_lens.cpp  pattern_perspective.cpp  trans_curve1_ft.cpp
0.3/dronescript/lib/agg23/examples/BeOS/aa_demo/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/alpha_gradient/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/alpha_mask3/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/bspline/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/conv_stroke/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/distortions/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/gpc_test/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/idea/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/image_filters/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/image_fltr_graph/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/line_patterns/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/lion_outline/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/pattern_fill/: Makefile
0.3/dronescript/lib/agg23/examples/BeOS/scanline_boolean/: Makefile
0.3/dronescript/lib/agg23/examples/X11/aa_demo/: Makefile
0.3/dronescript/lib/agg23/examples/X11/alpha_mask2/: Makefile
0.3/dronescript/lib/agg23/examples/X11/alpha_mask3/: Makefile
0.3/dronescript/lib/agg23/examples/X11/conv_dash_marker/: Makefile
0.3/dronescript/lib/agg23/examples/X11/conv_stroke/: Makefile
0.3/dronescript/lib/agg23/examples/X11/image1/: Makefile
0.3/dronescript/lib/agg23/examples/X11/image_alpha/: Makefile  readme
0.3/dronescript/lib/agg23/examples/X11/pattern_fill/: Makefile
0.3/dronescript/lib/agg23/examples/X11/rounded_rect/: Makefile
0.3/dronescript/lib/agg23/examples/X11/trans_curve2/: Makefile  readme
0.3/import-vergil/: .classpath  .project  build.xml
0.3/vergil/: boot.properties
bloopers/: Gear_Edge.h  Gear_EdgeBlooper.cpp  Gear_EdgeBlooper.h
config/: basicActorLibrary.xml  basicDirectors.xml  basicLibrary.xml  basicUtilities.xml  basicUtilitiesFSM.xml  defaultFullConfiguration.xml  fsmEffigyFactories.xml  fsmLibrary.xml  fsmTableauFactory.xml  iaTableauFactory.xml  math.xml  utilitiesLibrary.xml  utilityModalModel.xml  utilityParameters.xml
config/full/: configuration.xml  intro.htm
config/ptiny/: configuration.xml  intro.htm  makefile
data/config/: defaultFullConfiguration.xml
debian/: changelog  control  drone-default.ex  drone.doc-base.EX  files  manpage.1.ex  menu.ex  postinst.ex  postrm  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
demos/: SpikeImageType.java
drone.xcodeproj/: project.pbxproj
drone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lib/ffmpeg/: Makefile
lib/liblo/: Makefile.in  config.h  config.status  configure  liblo.pc  libtool
plugins/: README  build.xml  common.xml  plugins.xml  userplugins.xml.default
plugins/common/: Makefile.common  Makefile_options_Darwin  Makefile_options_Linux
plugins/drone.artkp/: build.xml  plugin.xml
plugins/drone.core/: plugin.xml
plugins/drone.frei0r/: build.xml  plugin.xml
plugins/drone.jmf/: build.xml
plugins/drone.jogl/: build.xml  plugin.xml
plugins/drone.librarybrowser/: plugin.xml
plugins/drone.midi/: INSTALL.Darwin
plugins/drone.serial/: INSTALL.Darwin  build.xml
plugins/drone.util/: build.xml
ptolemy/actor/: AtomicActor.java
ptolemy/kernel/: Port.java
ptolemy/moml/: MoMLAttribute.java  MoMLParser.java
schemas/: kalei.drn
schemas/jk/: bdisation.drn  bergen.drn  cool1.drn  cool3.drn  coolrelish.drn  couleurcoulante.drn  jambon.drn  simpleBlur.drn  smear.drn  testDisplaceGrid.drn  testMotionBlur2.drn  testVideoDelay.drn  test_antigrain.drn  testconversion.drn  video_sequencer.drn  work.drn  wow1.drn
schemas/js/: delayWindow.drn  encrage3.drn  leftDrone  testEncrage2.drn
schemas/mg/: cartoon2.drn  feedback.drn
schemas/mp/: ascii_art.drn  ascii_art_simple.drn  audioblendkdtreeblur.drone  audioblendkdtreeblursimple.drn  audiopremiertest.drone  electricblur.drn  electricblur.drone  fullKit.drone  testDisplaceGrid.drone
src/: AbstractPlug.cpp  AbstractPlug.h  AllGears.h  Array2D.h  Canvas.cpp  Canvas.h  CircBuf.cpp  CircBuf.h  CircularBuffer.h  CircularBufferSignal.cpp  CircularBufferSignal.h  ColorSpace.h  ConnectionItem.cpp  ConnectionItem.h  Engine.cpp  Engine.h  FrequencyAnalyzer.cpp  FrequencyAnalyzer.h  Gear.cpp  Gear.h  GearConverter.h  GearGui.cpp  GearGui.h  GearGui_Slider.cpp  GearGui_Slider.h  GearGui_TV.cpp  GearGui_TV.h  GearMaker.cpp  GearMaker.h  GearPropertiesDialog.cpp  GearPropertiesDialog.h  Gear_AsciiArt.cpp  Gear_AudioInput.cpp  Gear_AudioInput.h  Gear_AudioOutput.cpp  Gear_AudioOutput.h  Gear_AudioSource.cpp  Gear_AudioSource.h  Gear_AverageSignal.cpp  Gear_AverageSignal.h  (+139 more)
src/contrib/: contrib.pro
src/core/: AbstractPlug.cpp  AbstractPlug.h  AggWrapper.cpp  AggWrapper.h  Array.h  Array2D.h  BaseGearGui.cpp  BaseGearGui.h  CircularBuffer.h  ColorSpace.h  Connection.cpp  Connection.h  ConnectionItem.cpp  ConnectionItem.h  Control.cpp  Control.h  ControlPanel.cpp  ControlPanel.h  DroneCore.cpp  DroneCore.h  DroneGlobals.h  DroneMath.h  Engine.cpp  Engine.h  FrameBufferObject.cpp  FrameBufferObject.h  Gear.cpp  Gear.h  GearClassification.h  GearControl.cpp  GearControl.h  (+59 more)
techdoc/: ControlPanels.graffle  PluginParsing.graffle  Schema.graffle
tools/: addpreamble.py  copygear  preamble.txt  replace.py
trunk/: build.xml  config.pro  runDroneGuiOSX.launch
(+3752 files in other folders)
